samples/_failures_safe/1761551557_b365ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee29edf8.c: In function ‘main’:
./samples/SAFE/__tmp_ee29edf8.c:184:22: error: expected ‘;’ at end of input
  184 |         current_state
      |                      ^
      |                      ;
./samples/SAFE/__tmp_ee29edf8.c:184:9: error: expected declaration or statement at end of input
  184 |         current_state
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_ee29edf8.c:184:9: error: expected declaration or statement at end of input
